tests/errors/well-formed/invalid-attributes.fil
#[invalid_numeric_attribute=10,invalid_boolean_attribute]
comp main<'G: 1>() -> () {}